--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "ng2-bootstrap": "^1.3.3",
+    "ng2-toastr": "^1.4.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3",
-    "toastr": "^2.1.2"
+    "typescript": "~2.0.3"
   }
 }
